# pip-install-from-gh-producer

./: README.md  __init__.py  pyproject.toml  test.py
code/: __init__.py
pip_install_from_gh_producer/: __init__.py  functions.py
src/pip-install-from-gh-producer/: functions.py
