[project]
name = "pip_install_from_gh_producer"
version = "0.0.1"
authors = [
	{name="Eric Campbell", email="eric.robert.campbell@gmail.com"},
]
description = "An example of producing a package which will be consumed from a GH repository"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EricRobertCampbell/pip-install-from-gh-producer"
"Bug Tracker" = "https://github.com/EricRobertCampbell/pip-install-from-gh-producer/issues"


[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"
